Sat Oct 24 14:33:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Basic_Types.h:
          Fix for PPC64

Sat Oct 24 14:30:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux.GNU:
          Fix for PPC64

Sat Oct 24 12:18:00 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_Thread.inl:
          LynxOS improvements.

Sat Oct 24 12:15:40 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.cpp (strsignal):
          Fix for Solaris and AIX.

Fri Oct 23 21:38:31 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_snowleopard.GNU:

          Enhanced this file to remove -Wno-long-double from CFLAG.
          Thanks to Adam Mitz for the suggestion on how to fix this.

Fri Oct 23 20:25:13 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/os_include/os_string.h:
          Removed some legacy code.

Fri Oct 23 13:58:45 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Signal_Test on LynxOS.

Fri Oct 23 13:23:49 UTC 2009  Olli Savia  <ops@iki.fi>

        * m4/config_h.m4:
          Reverted: Mon Oct 19 20:58:10 UTC 2009  Olli Savia  <ops@iki.fi>

Fri Oct 23 13:10:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/File_Lock.{h,cpp,inl}:
          Use bool instead of int

Fri Oct 23 12:52:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/run_test.pl:
          Extended run_test check

Fri Oct 23 09:56:50 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-aix-5.x.h:
          Added ACE_HAS_STRSIGNAL.

Fri Oct 23 09:51:17 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-win32-msvc-10.h:
        * ace/config-win32-msvc-8.h:
        * ace/config-win32-msvc-9.h:
          Added missing  _get_osfhandle() call to ACE_FILENO_EQUIVALENT macro.

Thu Oct 22 14:16:10 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:
