@@ -1,3 +1,10 @@
+Mon Oct 26 07:48:19 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * ace/config-win32-msvc-10.h:
+        * ace/config-win32-msvc-8.h:
+        * ace/config-win32-msvc-9.h:
+          Fix for WinCE build.
+
 Sat Oct 24 14:33:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Basic_Types.h:
